# coursework-online-library

project/: Author.cpp  Author.h  Book.h  CMakeLists.txt  Library.cpp  Library.h  Loan.cpp  Loan.h  LoanFactory.cpp  LoanFactory.h  README.md  ReservationQueue.cpp  Review.cpp  Review.h  SearchCriteria.cpp  SearchCriteria.h  User.cpp  User.h  main.cpp
project/data/: books.txt
project/include/: Author.h  Book.h  Catalog.h  IObserver.h  Library.h  Loan.h  LoanFactory.h  LoanRecord.h  Notification.h  ReservationQueue.h  Review.h  Subscription.h  User.h
project/src/: Book.cpp  Catalog.cpp  Library.cpp  Loan.cpp  Review.cpp  Subscription.cpp  User.cpp  main.cpp
